Bug 1120945 - HTTP cache v2: maximum number of entries is limited to 13106 on FAT32, r=honzab